--- a/action.yml
+++ b/action.yml
@@ -6,12 +6,20 @@ description: |
 #  color: yellow
 
 inputs:
-  dependency:
-    description: Dependency name to fetch
-    required: true
   path:
     description: Path to the supported versions file
     required: true
+  ref:
+    description: Reference to fetch
+    required: false
+    default: "${{ github.ref }}"
+  dependency:
+    description: Dependency name to fetch
+    required: true
+  fetch-dir:
+    description: Directory where to fetch the supported version file
+    required: false
+    default: '${{ runner.temp }}'
 
 outputs:
   min:
@@ -38,6 +46,12 @@ runs:
         elif [[ -z "${{ inputs.path }}" ]]; then
           echo '::error::You must provide a path !'
           exit 1
+        elif [[ -z "${{ inputs.ref }}" ]]; then
+          echo '::error::Ref is invalid !'
+          exit 1
+        elif [[ -z "${{ inputs.fetch-dir }}" ]]; then
+          echo '::error::Fetch directory is invalid !'
+          exit 1
         fi
 
     - name: Download supported version file
@@ -45,8 +59,8 @@ runs:
       run: |
         # Download supported versions file ...
 
-        mkdir -p ${{ runner.temp }}/${{ github.job }} && \
-        curl --silent --show-error "https://raw.githubusercontent.com/${{ github.repository }}/${{ github.ref }}/${{ inputs.path }}" > ${{ runner.temp }}/${{ github.job }}/supported-versions.json
+        mkdir -p '${{ inputs.fetch-dir }}' && \
+        curl --silent --show-error 'https://raw.githubusercontent.com/${{ github.repository }}/${{ inputs.ref }}/${{ inputs.path }}' > '${{ inputs.fetch-dir }}/supported-versions.json'
 
     - id: parse-versions
       shell: bash
@@ -54,15 +68,15 @@ runs:
         # Parse ${{ inputs.dependency }} versions ...
 
         # Lowest version to assess (e.g Lowest supported version including security support)
-        MIN=$( jq -r '.${{ inputs.dependency }}.min' ${{ runner.temp }}/${{ github.job }}/supported-versions.json )
+        MIN=$( jq -r '.${{ inputs.dependency }}.min' '${{ inputs.fetch-dir }}/supported-versions.json' )
         echo "Min ${{ inputs.dependency }} version: $MIN"
         echo "min=$MIN" >> $GITHUB_OUTPUT
         # Highest version to assess (e.g Highest supported version)
-        MAX=$( jq -r '.${{ inputs.dependency }}.max' ${{ runner.temp }}/${{ github.job }}/supported-versions.json )
+        MAX=$( jq -r '.${{ inputs.dependency }}.max' '${{ inputs.fetch-dir }}/supported-versions.json' )
         echo "Max ${{ inputs.dependency }} version: $MAX"
         echo "max=$MAX" >> $GITHUB_OUTPUT
         # Next (currently not supported) version to assess (e.g Current dev version)
-        NEXT=$( jq -r '.${{ inputs.dependency }}.next' ${{ runner.temp }}/${{ github.job }}/supported-versions.json )
+        NEXT=$( jq -r '.${{ inputs.dependency }}.next' '${{ inputs.fetch-dir }}/supported-versions.json' )
         echo "Next ${{ inputs.dependency }} version: $NEXT"
         echo "next=$NEXT" >> $GITHUB_OUTPUT
 
