--- a/action.yml
+++ b/action.yml
@@ -9,13 +9,13 @@ inputs:
   path:
     description: Path to the supported versions file
     required: true
+  dependency:
+    description: Dependency name to fetch
+    required: true
   ref:
     description: Reference to fetch
     required: false
     default: "${{ github.ref }}"
-  dependency:
-    description: Dependency name to fetch
-    required: true
   fetch-dir:
     description: Directory where to fetch the supported version file
     required: false
@@ -68,17 +68,21 @@ runs:
         # Parse ${{ inputs.dependency }} versions ...
 
         # Lowest version to assess (e.g Lowest supported version including security support)
-        MIN=$( jq -r '.${{ inputs.dependency }}.min' '${{ inputs.fetch-dir }}/supported-versions.json' )
-        echo "Min ${{ inputs.dependency }} version: $MIN"
-        echo "min=$MIN" >> $GITHUB_OUTPUT
+        echo "min=$( jq -r '.${{ inputs.dependency }}.min' '${{ inputs.fetch-dir }}/supported-versions.json' )" >> $GITHUB_OUTPUT
         # Highest version to assess (e.g Highest supported version)
-        MAX=$( jq -r '.${{ inputs.dependency }}.max' '${{ inputs.fetch-dir }}/supported-versions.json' )
-        echo "Max ${{ inputs.dependency }} version: $MAX"
-        echo "max=$MAX" >> $GITHUB_OUTPUT
+        echo "max=$( jq -r '.${{ inputs.dependency }}.max' '${{ inputs.fetch-dir }}/supported-versions.json' )" >> $GITHUB_OUTPUT
         # Next (currently not supported) version to assess (e.g Current dev version)
-        NEXT=$( jq -r '.${{ inputs.dependency }}.next' '${{ inputs.fetch-dir }}/supported-versions.json' )
-        echo "Next ${{ inputs.dependency }} version: $NEXT"
-        echo "next=$NEXT" >> $GITHUB_OUTPUT
+        echo "next=$( jq -r '.${{ inputs.dependency }}.next' '${{ inputs.fetch-dir }}/supported-versions.json' )" >> $GITHUB_OUTPUT
+
+
+    - shell: bash
+      continue-on-error: true
+      run: |
+        # ℹ️ Info
+
+        echo "Min ${{ inputs.dependency }} version: ${{ steps.parse-versions.outputs.min }}"
+        echo "Max ${{ inputs.dependency }} version: ${{ steps.parse-versions.outputs.max }}"
+        echo "Next ${{ inputs.dependency }} version: ${{ steps.parse-versions.outputs.next }}"
 
     - uses: actions/github-script@v7
       continue-on-error: true
