--- a/action.yml
+++ b/action.yml
@@ -12,14 +12,10 @@ inputs:
   dependency:
     description: Dependency name to fetch
     required: true
-  ref:
-    description: Reference to fetch
+  with-summary:
+    description: Whether to add a summary or not
     required: false
-    default: "${{ github.ref }}"
-  fetch-dir:
-    description: Directory where to fetch the supported version file
-    required: false
-    default: '${{ runner.temp }}'
+    default: true
 
 outputs:
   min:
@@ -38,41 +34,27 @@ runs:
     # Even if an input is marked as "required", empty/no value may be passed !
     - shell: bash
       run: |
-        # Validate provided inputs ...
+        # 🔎 Validate provided inputs ...
 
-        if [[ -z "${{ inputs.dependency }}" ]]; then
-          echo '::error::You must provide a dependency !'
-          exit 1
-        elif [[ -z "${{ inputs.path }}" ]]; then
+        if [[ -z "${{ inputs.path }}" ]]; then
           echo '::error::You must provide a path !'
           exit 1
-        elif [[ -z "${{ inputs.ref }}" ]]; then
-          echo '::error::Ref is invalid !'
-          exit 1
-        elif [[ -z "${{ inputs.fetch-dir }}" ]]; then
-          echo '::error::Fetch directory is invalid !'
+        elif [[ -z "${{ inputs.dependency }}" ]]; then
+          echo '::error::You must provide a dependency !'
           exit 1
         fi
-
-    - name: Download supported version file
-      shell: bash
-      run: |
-        # Download supported versions file ...
-
-        mkdir -p '${{ inputs.fetch-dir }}' && \
-        curl --silent --show-error 'https://raw.githubusercontent.com/${{ github.repository }}/${{ inputs.ref }}/${{ inputs.path }}' > '${{ inputs.fetch-dir }}/supported-versions.json'
 
     - id: parse-versions
       shell: bash
       run: |
-        # Parse ${{ inputs.dependency }} versions ...
+        # 🔬 Parse ${{ inputs.dependency }} versions ...
 
         # Lowest version to assess (e.g Lowest supported version including security support)
-        echo "min=$( jq -r '.${{ inputs.dependency }}.min' '${{ inputs.fetch-dir }}/supported-versions.json' )" >> $GITHUB_OUTPUT
+        echo "min=$( jq -r '.${{ inputs.dependency }}.min' '${{ inputs.path }}' )" >> $GITHUB_OUTPUT
         # Highest version to assess (e.g Highest supported version)
-        echo "max=$( jq -r '.${{ inputs.dependency }}.max' '${{ inputs.fetch-dir }}/supported-versions.json' )" >> $GITHUB_OUTPUT
+        echo "max=$( jq -r '.${{ inputs.dependency }}.max' '${{ inputs.path }}' )" >> $GITHUB_OUTPUT
         # Next (currently not supported) version to assess (e.g Current dev version)
-        echo "next=$( jq -r '.${{ inputs.dependency }}.next' '${{ inputs.fetch-dir }}/supported-versions.json' )" >> $GITHUB_OUTPUT
+        echo "next=$( jq -r '.${{ inputs.dependency }}.next' '${{ inputs.path }}' )" >> $GITHUB_OUTPUT
 
 
     - shell: bash
@@ -85,6 +67,7 @@ runs:
         echo "Next ${{ inputs.dependency }} version: ${{ steps.parse-versions.outputs.next }}"
 
     - uses: actions/github-script@v7
+      if: ${{ inputs.with-summary }}
       continue-on-error: true
       with:
         script: |
