--- a/github-downloader/action.yml
+++ b/github-downloader/action.yml
@@ -3,7 +3,7 @@ description: |
   @TODO
 
 inputs:
-  path:
+  file-path:
     description: Path to the supported versions file from inside the repository
     required: true
   ref:
@@ -18,20 +18,18 @@ inputs:
 outputs:
   path:
     description: Path to the downloaded file
-    value: ${{ env.DWL_PATH }}
+    value: ${{ steps.dwl-file.outputs.path }}
 
 runs:
   using: composite
   steps:
     # Even if an input is marked as "required", empty/no value may be passed !
     - shell: bash
-      env:
-        DWL_PATH: ${{ inputs.fetch-dir }}/supported-versions.json
       run: |
         # 🔎 Validate provided inputs ...
 
-        if [[ -z "${{ inputs.path }}" ]]; then
-          echo '::error::You must provide a path !'
+        if [[ -z "${{ inputs.file-path }}" ]]; then
+          echo '::error::You must provide a file path !'
           exit 1
         elif [[ -z "${{ inputs.ref }}" ]]; then
           echo '::error::Ref is invalid !'
@@ -42,8 +40,13 @@ runs:
         fi
 
     - shell: bash
+      id: dwl-file
+      env:
+        DWL_PATH: ${{ inputs.fetch-dir }}/supported-versions.json
       run: |
         # ⬇️  Download supported versions file ...
 
         mkdir -p '${{ inputs.fetch-dir }}' && \
-        curl --silent --show-error 'https://raw.githubusercontent.com/${{ github.repository }}/${{ inputs.ref }}/${{ inputs.path }}' > '${DWL_PATH}'
+        curl --silent --show-error 'https://raw.githubusercontent.com/${{ github.repository }}/${{ inputs.ref }}/${{ inputs.file-path }}' > "${DWL_PATH}"
+
+        echo "path=${DWL_PATH}" >> $GITHUB_OUTPUT
