--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,4 @@
 /CODE_OF_CONDUCT.md export-ignore
 /CONTRIBUTING.md    export-ignore
 /README.md    export-ignore
-SECURITY.md export-ignore
+/SECURITY.md export-ignore
