--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,47 +38,46 @@ jobs:
       - name: Validate "Basic test"
         shell: bash
         env:
-          ACTUAL_MIN: ${{ steps.basic-test.outputs.min }}
-          EXPECTED_MIN: 8.0
-          ACTUAL_MAX: ${{ steps.basic-test.outputs.max }}
-          EXPECTED_MAX: 8.4
-          ACTUAL_NEXT: ${{ steps.basic-test.outputs.next }}
-          EXPECTED_NEXT: 8.5
+          ACTUAL_MIN: "${{ steps.basic-test.outputs.min }}"
+          EXPECTED_MIN: "8.0"
+          ACTUAL_MAX: "${{ steps.basic-test.outputs.max }}"
+          EXPECTED_MAX: "8.4"
+          ACTUAL_NEXT: "${{ steps.basic-test.outputs.next }}"
+          EXPECTED_NEXT: "8.5"
         run: |
-          if [[ "$ACTUAL_MIN" != "$EXPECTED_MIN"]]; then
+          if [[ "$ACTUAL_MIN" != "$EXPECTED_MIN" ]]; then
             echo "::error::Invalid min version: expected '$EXPECTED_MIN', got '$ACTUAL_MIN' !"
             exit 1
-          elif [[ "$ACTUAL_MAX" != "$EXPECTED_MAX"]]; then
+          elif [[ "$ACTUAL_MAX" != "$EXPECTED_MAX" ]]; then
             echo "::error::Invalid max version: expected '$EXPECTED_MAX', got '$ACTUAL_MAX' !"
             exit 1
-          elif [[ "$ACTUAL_NEXT" != "$EXPECTED_NEXT"]]; then
+          elif [[ "$ACTUAL_NEXT" != "$EXPECTED_NEXT" ]]; then
             echo "::error::Invalid next version: expected '$EXPECTED_NEXT', got '$ACTUAL_NEXT' !"
             exit 1
           fi
-        
 
-        - name: Unknown dependency
-          id: unknown-dep-test
-          continue-on-error: true
-          uses: ./
-          with:
-            path: tests/data/basic-test.json
-            dependency: unknown-dep
+      - name: Unknown dependency
+        id: unknown-dep-test
+        continue-on-error: true
+        uses: ./
+        with:
+          path: tests/data/basic-test.json
+          dependency: unknown-dep
 
-        - name: Validate "Unknown dependency"
-          shell: bash
-          run: |
-            echo "${{ toJSON(steps.unknown-dep-test) }}"
+      - name: Validate "Unknown dependency"
+        shell: bash
+        run: |
+          echo "${{ toJSON(steps.unknown-dep-test) }}"
 
-        - name: Unknown file
-          id: unknown-file-test
-          continue-on-error: true
-          uses: ./
-          with:
-            path: a/non/existent/file
-            dependency: php
+      - name: Unknown file
+        id: unknown-file-test
+        continue-on-error: true
+        uses: ./
+        with:
+          path: a/non/existent/file
+          dependency: php
 
-        - name: Validate "Unknown file"
-          shell: bash
-          run: |
-            echo "${{ toJSON(steps.unknown-file-test) }}"
+      - name: Validate "Unknown file"
+        shell: bash
+        run: |
+          echo "${{ toJSON(steps.unknown-file-test) }}"
