--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -68,16 +68,11 @@ jobs:
         shell: bash
         env:
           ACTUAL_OUTCOME: "${{ steps.unknown-dep-test.outcome }}"
-          EXPECTED_OUTCOME: "success"
+          EXPECTED_OUTCOME: "failure"
           ACTUAL_CONCLUSION: "${{ steps.unknown-dep-test.conclusion }}"
           EXPECTED_CONCLUSION: "success"
           ACTUAL_OUTPUTS: "${{ toJSON(steps.unknown-dep-test.outputs) }}"
-          EXPECTED_OUTPUTS: |
-            {
-              "min": "",
-              "max": "",
-              "next": ""
-            }
+          EXPECTED_OUTPUTS: '{"min":"","max":"","next":""}'
         run: |
           if [[ "$ACTUAL_OUTCOME" != "$EXPECTED_OUTCOME" ]]; then
             echo "::error::Invalid outcome: expected '$EXPECTED_OUTCOME', got '$ACTUAL_OUTCOME' !"
@@ -85,8 +80,10 @@ jobs:
           elif [[ "$ACTUAL_CONCLUSION" != "$EXPECTED_CONCLUSION" ]]; then
             echo "::error::Invalid conclusion: expected '$EXPECTED_CONCLUSION', got '$ACTUAL_CONCLUSION' !"
             exit 1
-          elif [[ "$ACTUAL_OUTPUTS" != "$EXPECTED_OUTPUTS" ]]; then
-            echo "::error::Invalid outputs: expected '$EXPECTED_OUTPUTS', got '$ACTUAL_OUTPUTS' !"
+          fi
+          ACTUAL_JSON=$(echo "$ACTUAL_OUTPUTS" |  jq -c "." )
+          if [[ "$ACTUAL_JSON" != "$EXPECTED_OUTPUTS" ]]; then
+            echo "::error::Invalid outputs: expected '$EXPECTED_OUTPUTS', got '$ACTUAL_JSON' !"
             exit 1
           fi
 
@@ -106,12 +103,7 @@ jobs:
           ACTUAL_CONCLUSION: "${{ steps.unknown-file-test.conclusion }}"
           EXPECTED_CONCLUSION: "success"
           ACTUAL_OUTPUTS: "${{ toJSON(steps.unknown-file-test.outputs) }}"
-          EXPECTED_OUTPUTS: |
-            {
-              "min": "",
-              "max": "",
-              "next": ""
-            }
+          EXPECTED_OUTPUTS: '{"min":"","max":"","next":""}'
         run: |
           if [[ "$ACTUAL_OUTCOME" != "$EXPECTED_OUTCOME" ]]; then
             echo "::error::Invalid outcome: expected '$EXPECTED_OUTCOME', got '$ACTUAL_OUTCOME' !"
@@ -119,7 +111,9 @@ jobs:
           elif [[ "$ACTUAL_CONCLUSION" != "$EXPECTED_CONCLUSION" ]]; then
             echo "::error::Invalid conclusion: expected '$EXPECTED_CONCLUSION', got '$ACTUAL_CONCLUSION' !"
             exit 1
-          elif [[ "$ACTUAL_OUTPUTS" != "$EXPECTED_OUTPUTS" ]]; then
-            echo "::error::Invalid outputs: expected '$EXPECTED_OUTPUTS', got '$ACTUAL_OUTPUTS' !"
+          fi
+          ACTUAL_JSON=$(echo "$ACTUAL_OUTPUTS" |  jq -c "." )
+          if [[ "$ACTUAL_JSON" != "$EXPECTED_OUTPUTS" ]]; then
+            echo "::error::Invalid outputs: expected '$EXPECTED_OUTPUTS', got '$ACTUAL_JSON' !"
             exit 1
           fi
