--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -117,3 +117,49 @@ jobs:
             echo "::error::Invalid outputs: expected '$EXPECTED_OUTPUTS', got '$ACTUAL_JSON' !"
             exit 1
           fi
+
+      - name: Downloader - Basic test
+        id: downloader-basic-test
+        uses: ./github-downloader
+        with:
+          file-path: tests/data/basic-test.json
+
+      - name: Validate "Downloader - Basic test"
+        shell: bash
+        env:
+          ACTUAL_PATH: "${{ steps.downloader-basic-test.outputs.path }}"
+          EXPECTED_PATH: '${{ runner.temp }}/supported-versions.json'
+        run: |
+          if [[ "$ACTUAL_PATH" != "$EXPECTED_PATH" ]]; then
+            echo "::error::Invalid path: expected '$EXPECTED_PATH', got '$ACTUAL_PATH' !"
+            exit 1
+          fi
+
+      - name: Downloader - Invalid path
+        id: downloader-invalid-path-test
+        uses: ./github-downloader
+        with:
+          file-path: a/non/existent/file
+
+      - name: Validate "Downloader - Invalid path"
+        shell: bash
+        env:
+          ACTUAL_OUTCOME: "${{ steps.downloader-invalid-path-test.outcome }}"
+          EXPECTED_OUTCOME: "failure"
+          ACTUAL_CONCLUSION: "${{ steps.downloader-invalid-path-test.conclusion }}"
+          EXPECTED_CONCLUSION: "success"
+          ACTUAL_OUTPUTS: "${{ toJSON(steps.downloader-invalid-path-test.outputs) }}"
+          EXPECTED_OUTPUTS: '{"path":""}'
+        run: |
+          if [[ "$ACTUAL_OUTCOME" != "$EXPECTED_OUTCOME" ]]; then
+            echo "::error::Invalid outcome: expected '$EXPECTED_OUTCOME', got '$ACTUAL_OUTCOME' !"
+            exit 1
+          elif [[ "$ACTUAL_CONCLUSION" != "$EXPECTED_CONCLUSION" ]]; then
+            echo "::error::Invalid conclusion: expected '$EXPECTED_CONCLUSION', got '$ACTUAL_CONCLUSION' !"
+            exit 1
+          fi
+          ACTUAL_JSON=$(echo "$ACTUAL_OUTPUTS" |  jq -c "." )
+          if [[ "$ACTUAL_JSON" != "$EXPECTED_OUTPUTS" ]]; then
+            echo "::error::Invalid outputs: expected '$EXPECTED_OUTPUTS', got '$ACTUAL_JSON' !"
+            exit 1
+          fi
