--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -133,14 +133,14 @@ jobs:
             exit 1
           fi
 
-      - name: Downloader - Invalid path
+      - name: Downloader - Invalid path test
         id: downloader-invalid-path-test
         continue-on-error: true
         uses: ./github-downloader
         with:
           file-path: a/non/existent/file
 
-      - name: Validate "Downloader - Invalid path"
+      - name: Validate "Downloader - Invalid path test"
         shell: bash
         env:
           ACTUAL_OUTCOME: "${{ steps.downloader-invalid-path-test.outcome }}"
