--- a/github-downloader/action.yml
+++ b/github-downloader/action.yml
@@ -47,6 +47,6 @@ runs:
         # ⬇️  Download supported versions file ...
 
         mkdir -p '${{ inputs.fetch-dir }}' && \
-        curl ${{ runner.debug && '' || '--silent' }} --show-error --fail 'https://raw.githubusercontent.com/${{ github.repository }}/${{ inputs.ref }}/${{ inputs.file-path }}'
+        curl ${{ runner.debug && '' || '--silent' }} --show-error --fail 'https://raw.githubusercontent.com/${{ github.repository }}/${{ inputs.ref }}/${{ inputs.file-path }}' > "$DWL_PATH"
 
         echo "path=${DWL_PATH}" >> $GITHUB_OUTPUT
