--- a/action.yml
+++ b/action.yml
@@ -79,7 +79,7 @@ runs:
         echo "Next ${{ inputs.dependency }} version: ${{ steps.parse-versions.outputs.next }}"
 
     - uses: actions/github-script@v7
-      if: ${{ inputs.with-summary }}
+      if: ${{ inputs.with-summary == 'true' || inputs.with-summary == 1 }}
       continue-on-error: true
       with:
         script: |
