--- a/updater/action.yml
+++ b/updater/action.yml
@@ -55,7 +55,7 @@ runs:
           exit 1
         fi
 
-    - name: Update ${{ inputs.dependency}}->${{ inputs.property }} version
+    - shell: bash
       env:
         FILE: ${{ inputs.file }}
         DEPENDENCY: ${{ inputs.dependency }}
@@ -63,8 +63,9 @@ runs:
         VALUE: ${{ inputs.value }}
         # Directly overwritting the original file is not working with JQ as it leads to an empty file
         # => A temporary file is required instead
-        TMP_FILE: "${{ runner.temp }}/supported-versions-auto-update-${{ inputs.dependency}}-${{ inputs.property }}.tmp"
+        TMP_FILE: "${{ runner.temp }}/supported-versions-auto-update-${{ inputs.dependency}}-${{ inputs.property }}.tmp"
       run: |
+        # Update ${DEPENDENCY}->${PROPERTY} version
         jq -r --monochrome-output --arg version "${VALUE}" \
           ". *= {\"${DEPENDENCY}\": {\"${PROPERTY}\": $version}}" \
           $FILE > $TMP_FILE
